--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yasuyuki Matsumura</title>
@@ -14,16 +15,13 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 200px; /* 高さを明示的に指定 */
-            background-image: url('top.jpeg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat; /* 画像の繰り返しを防ぐ */
+            background: #8a2be2;
+            color: white;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
             justify-content: space-between;
             padding: 15px 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             z-index: 1000;
         }
         .logo {
