--- a/style.css
+++ b/style.css
@@ -10,6 +10,23 @@
             background-color: #f8f9fa;
             color: #333;
         }
+        body {
+            background: url('top.JPG') no-repeat center center fixed;
+            background-size: cover;
+        }
+        /* 透かし効果を適用するための設定 */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('top.JPG') no-repeat center center fixed;
+            background-size: cover;
+            opacity: 0.3; /* ここで透明度を調整 */
+            z-index: -1; /* 背景として設定 */
+        }
         .header {
             position: fixed;
             top: 0;
