--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background: url('top.JPG') no-repeat center center fixed;
+    background: url('ghost.JPG') no-repeat center center fixed;
     background-size: cover;
     color: #333;
 }
@@ -15,7 +15,7 @@ body::before {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: url('top.JPG') no-repeat center center fixed;
+    background: url('ghost.JPG') no-repeat center center fixed;
     background-size: cover;
     opacity: 0.3; /* 透明度調整 */
     z-index: -1;
