--- a/style.css
+++ b/style.css
@@ -77,9 +77,8 @@ body::before {
 }
 
 .profile-photo {
-    width: 50px; /* 元の 1/3 に縮小 */
-    height: 50px; /* 縦も 1/3 に縮小 */
-    border-radius: 50%; /* 丸くする */
+    width: 100px; 
+    height: 100px; 
     display: block;
     margin: 10px auto;
     object-fit: cover; /* 画像のアスペクト比を保持 */
