--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body::before {
     justify-content: space-between;
     padding: 15px 20px;
     z-index: 1000;
+    font-family: Montserrat, sans-serif;
 }
 
 /* ロゴ */
